# MED_VQA_test

./: .env.example  .gitignore  Dockerfile  Error.txt  HardwareRequirements.md  Medical Visual Question Answering System.docx  Medical_VQA_System.txt  Progress_Report.md  README.md  colab_setup.py  deployment_guide.md  docker-compose.yml  llava_builder.py  merge_delta_weights.py  predict_standalone.py  pyproject.toml  requirements.txt  startup.sh  verify_pipeline.py
backend/: __init__.py  predict.py  requirements.txt
backend/api/: __init__.py  routes.py  schemas.py  server.py
backend/config/: __init__.py  settings.py
backend/explainability/: __init__.py  attention.py  gradcam.py
backend/localization/: __init__.py  grounding_dino.py  sam2.py
backend/models/: __init__.py  inference.py  loader.py  model_manager.py  stllava.py
backend/utils/: __init__.py  device.py  image_utils.py  logger.py  output_manager.py  startup.py  transformers_patch.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/status/: page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/vqa/: ImageUploader.tsx
frontend/src/lib/api/: client.ts
frontend/src/types/: api.ts
scripts/: download_models.py  setup_environment.py  test_gpu.py
tests/: __init__.py  conftest.py  test_api.py  test_explainability.py  test_inference.py  test_utils.py
(+3 files in other folders)
