[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-vqa"
version = "1.0.0"
description = "Medical Visual Question Answering System using STLLaVA-Med + Explainability + Localization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aditya Mishra"},
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.37.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "peft>=0.7.0",
    "protobuf>=4.25.0",
    "huggingface_hub>=0.20.0",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "grad-cam>=1.5.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
quantize = ["bitsandbytes>=0.43.0"]
localization = ["groundingdino", "sam2"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]
all = ["medical-vqa[quantize,localization,dev]"]

[tool.setuptools.packages.find]
include = ["backend*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
